--- a/java/app/src/main/AndroidManifest.xml
+++ b/java/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".MainActivitykt"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,15 +24,18 @@
 
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data android:scheme="io.justtrack"
-                    android:host="deeplink" />
+
+                <data
+                    android:host="deeplink"
+                    android:scheme="io.justtrack" />
             </intent-filter>
         </activity>
 
         <activity
-            android:name=".IronSourceActivitykt"
+            android:name=".IronSourceActivity"
             android:exported="true" />
     </application>
 
